<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartão de visita</string>
    <string name="label_description_new_card">Adicionar novo cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor hexadecimal ex: #A4C639</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Cartão cadastrado com Sucesso.</string>
    <string name="label_share">Compartilhar</string>
    <string name="color_value">Background color: #%1$s</string>

</resources>